docs/7.52/md/abennews-703.md
  

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews.htm) →  [Changes in Release 7.0 and its EhPs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-70_ehps.htm) → 

Changes in Release 7.0, EhP3 and 7.3, EhP1

The programming language ABAP and the ABAP runtime environment are identical in Release 7.0, EhP3 and 7.3, EhP1. Release 7.3, EhP1 is a result of a renaming of Release 7.0, EhP3. In both cases, the name of the ABAP application server (sy-saprl) is AS ABAP 7.31. With the exception of the following extensions, this corresponds to Release 7.0, EhP2.

-   [ABAP Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-703-abap-objects.htm)
    
-   [Selection Screens and Lists](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-703-screens.htm)
    
-   [Further Changes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-703-others.htm)
    

Note

With respect to the ABAP and ABAP runtime environment, Release 7.31 is not the successor to Release 7.3 from the track 7.1, 7.2, 7.3. The following Release 7.3 features are not included

-   The operational package concept in which package errors are detected by the syntax check and produced syntax errors
    
-   Support for class-based exceptions in RFC.
    

Continue
[ABAP Objects in Release 7.0, EhP3 and 7.3, EhP1](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-703-abap-objects.htm)
[Selection Screens and Lists in Release 7.0, EhP3 and 7.3](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-703-screens.htm)
[Further Changes in Release 7.0, EhP3 and 7.3, EhP1](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-703-others.htm)