docs/7.57/md/abennews-703.md
  

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews.htm) →  [News for Release 7.0 and its EhPs](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-70_ehps.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: News for Release 7.0, EhP3 and 7.3, EhP1, ABENNEWS-703, 757%0D%0A%0D%0AError:%0D%0A%0
D%0A%0D%0A%0D%0ASuggestion for improvement:)

News for Release 7.0, EhP3 and 7.3, EhP1

The programming language ABAP and the ABAP runtime framework are identical in Release 7.0, EhP3 and 7.3, EhP1. Release 7.3, EhP1 is a result of a renaming of Release 7.0, EhP3. In both cases, the name of the AS ABAP (sy-saprl) is AS ABAP 7.31. With the exception of the following extensions, this corresponds to Release 7.0, EhP2.

-   [ABAP Objects in Release 7.0, EhP3 and 7.3, EhP1](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-703-abap-objects.htm)
-   [Selection Screens and Lists in Release 7.0, EhP3 and 7.3](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-703-screens.htm)
-   [Further Changes in Release 7.0, EhP3 and 7.3, EhP1](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-703-others.htm)

Hint

With respect to the ABAP and ABAP runtime framework, Release 7.31 is not the successor to Release 7.3 from the track 7.1, 7.2, 7.3. The following Release 7.3 features are not included:

-   The operational package concept in which package errors are detected by the syntax check and produced syntax errors
-   Support for class-based exceptions in RFC.

Continue
[ABAP Objects in Release 7.0, EhP3 and 7.3, EhP1](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-703-abap-objects.htm)
[Selection Screens and Lists in Release 7.0, EhP3 and 7.3](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-703-screens.htm)
[Further Changes in Release 7.0, EhP3 and 7.3, EhP1](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-703-others.htm)